# gravity-bridge

./: .codecov.yml  .dockerignore  .env.example  .gitignore  .gitnore  .golangci.yml  CHANGELOG.md  Gopkg.toml  LICENSE  Makefile  Peggy.sol  README.md  RUN.md  app.go  buidler.config.ts  cosmos-ethereum-bridge.postman_collection.json  design_a.md  design_b.md  docker-compose.yml  example.json  export.go  genesis.go  genesis.json  glide.yaml  go.mod  go.sum  how-to-setup-buidler.txt  init.sh  logproof.go  notes.md  package-lock.json  package.json  readme.md  relayer-cosmos.sh  relayer-eth-1.sh  relayer-eth-2.sh  slashing-spec.md  start-testnet.sh  tx.proto
.circleci/: config.yml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
app/: app.go  export.go  genesis.go  nft_handler.go
commands/: utils.go
contracts/: BitcoinZirconium.sol  ERC20.sol  ETGate.abi  ETGate.sol  Greeter.sol  IAVL.sol  IERC20.sol  Peggy.sol  SigningTest.sol  SimpleTree.sol  TendermintLC.sol  TendermintMerkle.sol  TendermintUtil.sol  TendermintWire.sol  ValidatorSet.sol  etgate.go
design/: arbitrary-logic.md  invalidation.md  overview.md  relaying-semantics.md
docs/: PeggyForRemix.sol  architecture.md  cosmos-relayer.md  cosmos-to-ethereum.md  ethereum-relayer.md  ethereum-to-cosmos.md  init-local-eth-chain.md  init-relayer.md  init-ropsten-testnet-chain.md  initialization.md  local-ethereum-usage.md  peggy.postman_collection.json  ropsten-testnet-usage.md  running.md  setup-bridge-chain.md  setup-eth-local.md  setup-eth-ropsten.md  setup-relayer.md
ethereum-contracts/: .gitignore  (+10 more)
orchestrator/: .dockerignore  Cargo.toml  Dockerfile  Dockerfile_testnet  README.md  ci.Dockerfile  startup.sh  testnet.Dockerfile
orchestrator/client/: Cargo.toml
orchestrator/client/src/: main.rs
orchestrator/cosmos_gravity/: Cargo.toml
orchestrator/cosmos_gravity/src/: build.rs  lib.rs  messages.rs  query.rs  send.rs  utils.rs
orchestrator/cosmos_peggy/: Cargo.toml
orchestrator/cosmos_peggy/src/: lib.rs  messages.rs  query.rs  send.rs  tests.rs  types.rs  utils.rs
orchestrator/ethereum_gravity/: Cargo.toml
orchestrator/ethereum_gravity/src/: lib.rs  logic_call.rs  submit_batch.rs  utils.rs  valset_update.rs
orchestrator/ethereum_gravity/src/test_cases/: valset_update_test.rs
orchestrator/ethereum_peggy/: Cargo.toml
orchestrator/ethereum_peggy/src/: deploy_erc20.rs  lib.rs  logic_call.rs  message_signatures.rs  send_to_cosmos.rs  submit_batch.rs  utils.rs  valset_update.rs
orchestrator/gbt/: Cargo.toml
orchestrator/gbt/src/: args.rs  config.rs  default-config.toml  main.rs  orchestrator.rs  relayer.rs
orchestrator/gbt/src/client/: cosmos_to_eth.rs  deploy_erc20_representation.rs  eth_to_cosmos.rs
orchestrator/gbt/src/keys/: mod.rs  register_orchestrator_address.rs  set_orchestrator_address.rs
orchestrator/gorc/: .gitignore  Cargo.toml  README.md  gorc.toml  keystore.pem
orchestrator/gorc/src/: application.rs  commands.rs  config.rs  lib.rs  utils.rs
orchestrator/gorc/src/commands/: cosmos_to_eth.rs  deploy.rs  eth_to_cosmos.rs  keys.rs  orchestrator.rs  print_config.rs  query.rs  sign_delegate_keys.rs  start.rs  tests.rs  tx.rs  version.rs
orchestrator/gorc/src/commands/deploy/: erc20.rs
orchestrator/gorc/src/commands/keys/: cosmos.rs  eth.rs
orchestrator/gorc/src/commands/keys/cosmos/: add.rs  delete.rs  import.rs  list.rs  recover.rs  rename.rs  show.rs  update.rs
orchestrator/gorc/src/commands/keys/eth/: add.rs  delete.rs  import.rs  list.rs  recover.rs  rename.rs  show.rs  update.rs
orchestrator/gorc/src/commands/orchestrator/: start.rs
orchestrator/gorc/src/commands/query/: cosmos.rs  eth.rs
orchestrator/gorc/src/commands/tx/: cosmos.rs  eth.rs
orchestrator/gorc/tests/: acceptance.rs
orchestrator/gravity_proto/: Cargo.toml
orchestrator/gravity_proto/src/: lib.rs
orchestrator/gravity_proto/src/prost/: cosmos.base.v1beta1.rs  google.api.rs  gravity.v1.rs
orchestrator/gravity_utils/: Cargo.toml
orchestrator/gravity_utils/src/: connection_prep.rs  error.rs  lib.rs  message_signatures.rs
orchestrator/gravity_utils/src/types/: batches.rs  config.rs  ethereum_events.rs  event_signatures.rs  logic_call.rs  mod.rs  signatures.rs  valsets.rs
orchestrator/orchestrator/: Cargo.toml
orchestrator/orchestrator/src/: batch_relaying.rs  client.rs  ethereum_event_watcher.rs  get_with_retry.rs  lib.rs  main.rs  main_loop.rs  metrics.rs  oracle_resync.rs  orchestrator.rs  register-eth-key.rs  test_runner.rs  valset_relaying.rs
orchestrator/orchestrator/src/test_cases/: bootstrapping.rs  mod.rs  utils.rs
orchestrator/orchestrator/src/tests/: mod.rs  test_contract_calls.rs
orchestrator/peggy_proto/: Cargo.toml
orchestrator/peggy_proto/src/: lib.rs
orchestrator/peggy_proto/src/prost/: peggy.v1.rs
orchestrator/peggy_utils/: Cargo.toml
orchestrator/peggy_utils/src/: connection_prep.rs  error.rs  lib.rs  message_signatures.rs  types.rs
orchestrator/peggy_utils/src/types/: batches.rs  ethereum_events.rs  logic_call.rs  mod.rs  signatures.rs  valsets.rs
orchestrator/proto_build/: Cargo.toml
orchestrator/proto_build/src/: main.rs
orchestrator/register_delegate_keys/: Cargo.toml
orchestrator/register_delegate_keys/src/: main.rs
orchestrator/register_eth_key/: Cargo.toml
orchestrator/register_eth_key/src/: main.rs
orchestrator/relayer/: Cargo.toml
orchestrator/relayer/src/: batch_relaying.rs  find_latest_valset.rs  lib.rs  logic_call_relaying.rs  main.rs  main_loop.rs  valset_relaying.rs
orchestrator/scripts/: build-release.sh
orchestrator/src/: lib.rs  main.rs
orchestrator/src/cosmos_interop/: mod.rs  msgs.rs  query.rs  send.rs  tests.rs
orchestrator/test_runner/: Cargo.toml  startup.sh
orchestrator/test_runner/src/: arbitrary_logic.rs  bootstrapping.rs  happy_path.rs  happy_path_v2.rs  main.rs  orch_keys_update.rs  transaction_stress_test.rs  utils.rs  valset_stress.rs
tests/test-runner/: Cargo.toml
tests/test-runner/src/: main.rs
witness/: .gitignore  Cargo.toml  Peggy.abi  SolidityToy.abi
witness/src/: errors.rs  main.rs  tx.rs
(+826 files in other folders)
