[workspace]
members = ["orchestrator", "cosmos_gravity", "ethereum_gravity", "gravity_utils", "proto_build", "test_runner", "gravity_proto", "relayer", "client", "register_delegate_keys", "gorc"]
default-members = ["orchestrator", "test_runner"]


# [patch.crates-io]
bip32 = { git = "https://github.com/iqlusioninc/crates.git", branch = "main" }