[package]
name = "witness"
version = "0.1.0"
authors = ["Tyler Neely <t@jujit.su>"]

[dependencies]
log = "0.4"
env_logger = "0.5"
ethabi = "5.0"
ethabi-derive = "5.0"
ethabi-contract = "5.0"
error-chain = "0.11"
web3 = { git = "https://github.com/tomusdrw/rust-web3", branch = "bridge" }
futures = "0.1"
tokio-core = "0.1.8"
tokio-timer = "0.1.2"
serde = "1.0"
serde_derive = "1.0"
docopt = "0.8"
protobuf = "1.4.3"
ethereum-types = "0.2"
sha2 = { version = "0.6", optional = true }

[dependencies.ed25519-dalek]
version = "^0.6"
optional = true

[features]
dalek = ["ed25519-dalek", "sha2"]
default = ["dalek"]
