[package]
name = "client"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

[dependencies]
ethereum_peggy = {path = "../ethereum_peggy"}
cosmos_peggy = {path = "../cosmos_peggy"}
peggy_utils = {path = "../peggy_utils"}
peggy_proto = {path = "../peggy_proto/"}

deep_space = "0.2"
contact = "0.3"
serde_derive = "1.0"
clarity = "0.4"
docopt = "1"
serde = "1.0"
actix-rt = "1"
lazy_static = "1"
url = "2"
web30 = "0.10"
env_logger = "0.8"
openssl-probe = "0.1"