[package]
name = "client"
version = "0.4.1"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

[dependencies]
ethereum_gravity = {path = "../ethereum_gravity"}
cosmos_gravity = {path = "../cosmos_gravity"}
gravity_utils = {path = "../gravity_utils"}
gravity_proto = {path = "../gravity_proto/"}

deep_space = "0.2"
contact = "0.4"
serde_derive = "1.0"
clarity = "0.4"
docopt = "1"
serde = "1.0"
actix-rt = "1"
lazy_static = "1"
url = "2"
web30 = "0.10"
env_logger = "0.8"
openssl-probe = "0.1"
tokio = "0.2"