[package]
name = "cosmos_gravity"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gravity_utils = {path = "../gravity_utils"}
ethereum_gravity = {path = "../ethereum_gravity"}
gravity_proto = {path = "../gravity_proto/"}

contact = "0.4"
deep_space = "0.2"
serde_derive = "1.0"
clarity = "0.4"
serde = "1.0"
num256 = "0.3"
log = "0.4"
sha3 = "0.9"
tokio = "0.2"
web30 = "0.10"
tonic = "0.3"

[dev-dependencies]
env_logger = "0.8"
rand = "0.8"
actix = "0.10"