[package]
name = "cosmos_gravity"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gravity_utils = {path = "../gravity_utils"}
ethereum_gravity = {path = "../ethereum_gravity"}
gravity_proto = {path = "../gravity_proto/"}

deep_space ={git="https://github.com/iqlusioninc/deep_space/", branch="zaki/tendermint_0_21"}
clarity = "0.4.11"
serde = "1.0"
num256 = "0.3"
log = "0.4"
sha3 = "0.9"
tokio = "1.4"
web30 = "0.14.4"
tonic = "0.4"
cosmos-sdk-proto = {git="http://github.com/cosmos/cosmos-rust", branch="main"}
prost = "0.7"
prost-types = "0.7"
bytes = "1"

[dev-dependencies]
env_logger = "0.8"
rand = "0.8"
actix = "0.11"