[package]
name = "cosmos_peggy"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peggy_utils = {path = "../peggy_utils"}
ethereum_peggy = {path = "../ethereum_peggy"}
peggy_proto = {path = "../peggy_proto/"}

contact = "0.2.5"
deep_space = "0.2.4"
serde_derive = "1.0"
clarity = "0.4"
serde = "1.0"
actix = "0.10"
actix-web = {version = "3.1", features=["openssl"]}
actix-rt = "1"
url = "2"
num256 = "0.3"
log = "0.4"
env_logger = "0.8"
serde_json = "1.0"
sha3 = "0.9"
tokio = "0.2"
web30 = "0.9"
tonic = "0.3"

[dev-dependencies]
rand = "0.7"
actix = "0.10"