[package]
name = "ethereum_gravity"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gravity_utils = {path = "../gravity_utils"}

deep_space ={git="https://github.com/iqlusioninc/deep_space/", branch="zaki/tendermint_0_21"}
clarity = "0.4.11"
web30 = "0.14.4"
num256 = "0.3"
log = "0.4"
sha3 = "0.9"
