[package]
name = "ethereum_peggy"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peggy_utils = {path = "../peggy_utils"}

deep_space = "0.2"
clarity = "0.4"
web30 = "0.10"
num256 = "0.3"
log = "0.4"
sha3 = "0.9"
