[package]
name = "gorc"
authors = []
version = "0.1.0"
edition = "2018"

[dependencies]
gumdrop = "0.7"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
regex = "1.5.4"

cosmos_gravity = { path = "../cosmos_gravity" }
ethereum_gravity = { path = "../ethereum_gravity" }
gravity_proto = { path = "../gravity_proto" }
gravity_utils = { path = "../gravity_utils" }
orchestrator = { path = "../orchestrator" }
relayer = { path = "../relayer" }

deep_space ={git="https://github.com/iqlusioninc/deep_space/", branch="zaki/tendermint_0_21"}
clarity = "0.4.12"
actix-rt = "2.2"
rpassword = "5"
bip32 = "0.2"
k256 = { version = "0.9", features = ["pem"] }
pkcs8 = { version = "0.7", features = ["pem"] }
signatory = "0.23.0-pre"
rand_core = { version = "0.6", features = ["std"] }

abscissa_tokio = { version = "0.6.0-pre.2", features = ["actix"] }
web30 = "0.14"
tokio = "1"
tonic = "0.4"
toml = "0.5"

prost = "0.7"
bytes = "1"

[dependencies.abscissa_core]
version = "0.6.0-pre.1"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.6.0-pre.1", features = ["testing"] }
once_cell = "1.2"
