[package]
name = "gorc"
authors = []
version = "0.2.15"
edition = "2018"

[dependencies]
gumdrop = "0.7"
serde = { version = "1", features = ["serde_derive"] }
thiserror = "1"
regex = "1.5.4"

cosmos_gravity = { path = "../cosmos_gravity" }
ethereum_gravity = { path = "../ethereum_gravity" }
gravity_proto = { path = "../gravity_proto" }
gravity_utils = { path = "../gravity_utils" }
orchestrator = { path = "../orchestrator" }
relayer = { path = "../relayer" }

deep_space ={git="https://github.com/iqlusioninc/deep_space/", branch="master"}
clarity = "0.4.12"
actix-rt = "2.2"
rpassword = "5"
bip32 = "0.2"
k256 = { version = "0.9", features = ["pem"] }
pkcs8 = { version = "0.7", features = ["pem"] }
signatory = "0.23.0-pre"
rand_core = { version = "0.6", features = ["std"] }
openssl-probe = "0.1.4"

abscissa_tokio = { version = "0.6.0-pre.2", features = ["actix"] }
web30 = "0.15"
tokio = "1"
tonic = "0.4"
toml = "0.5"
env_logger = "0.8"
log = "0.4"

prost = "0.7"
bytes = "1"
proc-macro2 = "1.0.28"

[dependencies.abscissa_core]
git = "https://github.com/iqlusioninc/abscissa"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { git = "https://github.com/iqlusioninc/abscissa", features = ["testing"] }
once_cell = "1.2"
