[package]
name = "gravity_proto"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.7"
prost-types = "0.7"
cosmos-sdk-proto = {git = "https://github.com/cosmos/cosmos-rust/", branch = "jkilpatr/all-upstream-proto"}
tonic = "0.4"