[package]
name = "gravity_utils"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gravity_proto = {path = "../gravity_proto/"}
cosmos-sdk-proto = {git="http://github.com/cosmos/cosmos-rust", branch="main"}
deep_space ={git="https://github.com/iqlusioninc/deep_space/", branch="zaki/tendermint_0_21"}
web30 = "0.14.4"
clarity = "0.4.11"
num256 = "0.3"
serde_derive = "1.0"
serde = "1.0"
tokio = "1.4"
tonic = "0.4"
num-bigint = "0.4"
log = "0.4"
url = "2"
sha3 = "0.9"
[dev_dependencies]
rand = "0.8"
actix = "0.11"