[package]
name = "peggy_proto"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prost = "0.6"
prost-types = "0.6"
cosmos-sdk-proto = "0.2"
tonic = "0.3.1"