[package]
name = "peggy_utils"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
peggy_proto = {path = "../peggy_proto/"}

deep_space = "0.2"
contact = "0.3"
web30 = "0.10"
clarity = "0.4"
num256 = "0.3"
serde_derive = "1.0"
serde = "1.0"
tokio = "0.2"
tonic = "0.3"
num-bigint = "0.3"
log = "0.4"
[dev_dependencies]
rand = "0.8"