[package]
name = "register_delegate_keys"
version = "0.4.1"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

[[bin]]
name = "register-delegate-keys"
path = "src/main.rs"

[dependencies]
relayer = {path = "../relayer/"}
ethereum_gravity = {path = "../ethereum_gravity"}
cosmos_gravity = {path = "../cosmos_gravity"}
gravity_utils = {path = "../gravity_utils"}
gravity_proto = {path = "../gravity_proto/"}

deep_space = "2.1"
contact = "0.4"
serde_derive = "1.0"
clarity = "0.4"
docopt = "1"
serde = "1.0"
actix-rt = "2.2.0"
lazy_static = "1"
web30 = "0.12"
env_logger = "0.8"
openssl-probe = "0.1"
rand = "0.8"