[package]
name = "relayer"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

[lib]
name = "relayer"
path = "src/lib.rs"

[[bin]]
name = "relayer"
path = "src/main.rs"

[dependencies]
ethereum_peggy = {path = "../ethereum_peggy"}
cosmos_peggy = {path = "../cosmos_peggy"}
peggy_utils = {path = "../peggy_utils"}
peggy_proto = {path = "../peggy_proto/"}

deep_space = "0.2"
contact = "0.3"
serde_derive = "1.0"
clarity = "0.4"
docopt = "1"
serde = "1.0"
actix-rt = "1"
lazy_static = "1"
url = "2"
web30 = "0.10"
num256 = "0.3"
log = "0.4"
env_logger = "0.8"
tokio = "0.2"
tonic = "0.3"
openssl-probe = "0.1"


[dev-dependencies]
actix = "0.10"