[package]
name = "test_runner"
version = "0.1.0"
authors = ["Justin Kilpatrick <justin@althea.net>"]
edition = "2018"

# only becuase I like - more in names
[[bin]]
name = "test-runner"
path = "src/main.rs"

[dependencies]
ethereum_peggy = {path = "../ethereum_peggy"}
cosmos_peggy = {path = "../cosmos_peggy"}
peggy_utils = {path = "../peggy_utils"}
peggy_proto = {path = "../peggy_proto/"}
orchestrator = {path = "../orchestrator/"}

deep_space = "0.2"
contact = "0.3"
serde_derive = "1.0"
clarity = "0.4"
docopt = "1"
serde = "1.0"
actix = "0.10"
actix-web = {version = "3", features=["openssl"]}
actix-rt = "1"
lazy_static = "1"
url = "2"
web30 = "0.10"
num256 = "0.3"
log = "0.4"
env_logger = "0.8"
tokio = "0.2"
rand = "0.8"
tonic = "0.3"
futures = "0.3"


[dev-dependencies]
actix = "0.10"